# edu-gachon2026-project

./: README.md
projects/team07-sequel/: .coderabbit.yaml  .env.example  .gitignore  README.md  project.yml  pyproject.toml
projects/team07-sequel/app/: main.py  ui.py
projects/team07-sequel/backend/: .env.example  README.md  pytest.ini  requirements-dev.txt  requirements.txt
projects/team07-sequel/bench/: .gitignore  README.md  __init__.py  ablation.py  bench.py  bird_full.py  bird_strong.py  build_embeddings.py  build_eval_set.py  build_fewshot.py  build_metadata.py  build_schema_linked.py  config.py  diag_linker.py  evaluate.py  fewshot_train_ab.py  korean_final.py  mschema_ab.py  route_eval.py  route_eval_real.py  routing_final.py  summarize_md.py
projects/team07-sequel/docs/: PROJECT_OVERVIEW.md  api.md  benchmark_routing.md  difficulty_criteria.md  기획서_대비_구현현황.md  스키마링커_정리.md  실험_총정리.md  실험_총정리_v2.md  파이프라인_정리.md
projects/team07-sequel/frontend/: .dockerignore  .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
projects/team07-sequel/tests/: eval_linker.py  test_clarify.py  test_masking.py  test_metrics.py  test_session_store.py
projects/team08-FinBrief/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_DETAIL.md  docker-compose.yml  project.yml  pyproject.toml
projects/team08-FinBrief/app/: __init__.py  main.py
projects/team08-FinBrief/config/: litellm_config.yaml.example
projects/team08-FinBrief/data/: default_topics.json
projects/team08-FinBrief/evals/: finbrief_eval_set.schema.json
projects/team08-FinBrief/files/: FinBrief_API_명세.md  FinBrief_기획서_및_7일_로드맵.md  FinBrief_데이터_흐름.md  FinBrief_시스템_아키텍처.md  FinBrief_제품_기능_명세.md
projects/team08-FinBrief/frontend/: index.html
projects/team08-FinBrief/schemas/: finbrief_state.schema.json  seed_topics.sql  supabase.sql
projects/team08-FinBrief/tests/: test_agent_pipeline.py  test_analyze_llm.py  test_batch_options.py  test_card_number_format.py  test_card_schema.py  test_card_source_explainer.py  test_chatbot.py  test_chatbot_langfuse.py  test_chatbot_observability.py  test_chatbot_persona.py  test_ci_cd_contracts.py  test_data_sources.py  test_deliver.py  test_deliver_channel.py  test_embedding_and_rag.py  test_evaluations.py  test_health.py  test_image_gen.py  test_ingestion_api.py  test_langfuse_scores.py  test_llm_fallback.py  test_llm_guardrails.py  test_news_ingestion.py  test_notifier.py  test_notifier_bot.py  test_observability.py  test_pipeline_image.py  test_rag_retrieval.py  test_relevance_guard.py  test_report_explainer.py  test_report_render.py  test_report_result_sharing.py  (+11 more)
projects/team10-ai-code-review-agent/: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.yml  project.yml  pyproject.toml
(+542 files in other folders)
