[project]
name = "finbrief"
version = "0.1.0"
description = "Personalized AI financial briefing agent MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "feedparser>=6.0",
    "httpx>=0.27",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "supabase>=2.7",
    "yfinance>=0.2",
    "langgraph>=1.0",
    "litellm>=1.0",
    "langfuse>=4.0",
    "opentelemetry-sdk>=1.0",
    "opentelemetry-exporter-otlp>=1.0",
    "pillow>=10.0",
    "google-genai>=1.0",
    "discord.py>=2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = [
    "data*",
    "docs*",
    "evals*",
    "project_docs*",
    "ref*",
    "reports*",
    "schemas*",
    "scripts*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
